Trying to fix overlapping and text not showing up when resizing

--- a/style.css
+++ b/style.css
@@ -12,118 +12,8 @@ body {
     background-color: #1F2937;
     align-items: center;
     height:5vh;
-}
-.sign-up { 
-    display:flex; 
-    justify-content: space-between;
-    align-items: center;
-
-    background-color: #1F2937;
-    height:40vh;
-    flex-wrap: wrap;
-}
-.left-text { 
-    display: flex; 
-    flex-direction:column;
-    flex: 1 1 auto;
-    justify-content: center;
-    margin-left: 200px;
-    gap: 8px;
-}
-.img-right { 
-    margin-right: 200px;
-}
-.information { 
-    font-size: 36px;
-    font-weight: bolder;
-    color:#1F2937;
-    text-align: center;
-    margin: 30px 0px;
-}
-.full { 
-    display:flex;
-    flex-direction: column;
-    height:45vh;
-    gap: 12px;
-    justify-content: center;
-    align-items: center;
-}
-.container { 
-    display:flex; 
-    gap: 8px;
-    align-items: center;
-}
-.imgtext { 
-    max-width: 165px;
-    flex: 1 0 auto;
-    flex-wrap: wrap;
-    text-align: center;
-    margin-bottom: 40px;
-}
-.quote { 
-    background-color: #E5E7EB;
-    display:flex;
-    flex-direction: column;
-    margin-bottom: 150px;
-}
-.saying { 
-    font-size: 36px;
-    font-style: light italic;
-    color:#1F2937;
-    margin-right: 445px;
-}
-.artist { 
-    text-align: left;
-    margin-left: 575px;
-}
-.product { 
-    display:flex; 
-    flex-direction:column;
-    gap: 3px;
-    justify-content: center;
-    align-items: center;
-    background-color: #3882F6;
-    width:900px;
-    color:#E5E7EB;
-    height:15vh;
-}
-.boldtext { 
-    font-size: 24px;
-    font-weight: bold;
-    margin-right:450px;
-}
-.extratext { 
-    font-size: 18px;
-    margin-right:295px;
-}
-.bottom-text { 
-    display:flex;
-}
-button { 
-    background-color: #3882F6; 
-    max-width: 75px;
-    flex: 1 0 auto;
-    color:#E5E7EB
-}
-.hero-text { 
-    font-size: 48px; 
-    font-weight:bolder; 
-    color:#F9FAF8;
-    max-width: 300px;
-}
-.text{ 
-    font-size:18px; 
-    color:#E5E7EB;
-    max-width: 450px;
-}
-.footer { 
-    background-color: #1F2937;
-    flex: 1 1 1;
-    margin-top: auto;
-    font-size:18px; 
-    color:#E5E7EB;
-    text-align: center;
-    margin-top:75px;
+    min-width: 0;
+    min-height: 75px;
 }
 .left-links { 
     font-weight: bold;
@@ -145,4 +35,136 @@ ul {
 }
 li { 
     font-size: 18px;
+}
+.left-text { 
+    display: flex; 
+    flex-direction:column;
+    flex: 1 1 auto;
+    justify-content: center;
+    margin-left: 200px;
+    gap: 8px;
+}
+.img-right { 
+    margin-right: 200px;
+}
+
+.sign-up { 
+    display:flex; 
+    justify-content: space-between;
+    align-items: center;
+    background-color: #1F2937;
+    height:40vh;
+    flex-wrap: wrap;
+}
+.information { 
+    font-size: 36px;
+    font-weight: bolder;
+    color:#1F2937;
+    text-align: center;
+    margin: 30px 0px;
+}
+.full { 
+    display:flex;
+    flex-direction: column;
+    height:45vh;
+    gap: 12px;
+    justify-content: center;
+    align-items: center;
+}
+.container { 
+    display:flex; 
+    gap: 8px;
+    align-items: center;
+    flex-wrap: wrap;
+    width:700px;
+}
+.imgtext { 
+    max-width: 165px;
+    min-height:50px;
+    flex: 1 0 1;
+    text-align: center;
+    margin-bottom: 40px;
+}
+.quote { 
+    background-color: #E5E7EB;
+    display:flex;
+    flex: 1 1 0;
+    flex-direction: column;
+    margin-bottom: 150px;
+    width:700px;
+    min-height: 0;
+    min-width: 0;
+}
+.saying { 
+    font-size: 36px;
+    font-style: light italic;
+    color:#1F2937;
+    margin-right: 445px;
+}
+.artist { 
+    text-align: left;
+    margin-left: 575px;
+}
+.product { 
+    display:flex; 
+    flex-direction:column;
+    gap: 3px;
+    justify-content: center;
+    align-items: center;
+    background-color: #3882F6;
+    width:1500px;
+    flex: 1 1 auto;
+    min-width: 0;
+    color:#E5E7EB;
+    height:15vh;
+    border-radius: 10px;
+}
+.boldtext { 
+    font-size: 24px;
+    font-weight: bold;
+    margin-right:450px;
+}
+.extratext { 
+    font-size: 18px;
+    margin-right:240px;
+}
+.bottom-text { 
+    display:flex;
+}
+button { 
+    background-color: #3882F6; 
+    max-width: 120px;
+    height: 25px;
+    flex: 1 0 auto;
+    color:#E5E7EB;
+    border-radius: 5px;
+    font-size: 16px;
+    font-weight: bold;
+}
+.no-white { 
+    border:none;
+}
+.white-border { 
+    border-color:#ffffff;
+    width:125px;
+}
+.hero-text { 
+    font-size: 48px; 
+    font-weight:bolder; 
+    color:#F9FAF8;
+    max-width: 300px;
+}
+.text{ 
+    font-size:18px; 
+    color:#E5E7EB;
+    max-width: 450px;
+}
+.footer { 
+    background-color: #1F2937;
+    flex: 1 1 1;
+    margin-top: auto;
+    font-size:18px; 
+    color:#E5E7EB;
+    text-align: center;
+    margin-top:75px;
 }
